--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
     <h1>Index Page</h1>
 
+    <div class="container">
+        <p>ASDFASDFDSADFADSFADSFASDFASDFASDFASDFADSFADSFADSFADFS</p>
+    </div>
+
     <script src="./js/app.js"></script>
 </body>
 
