--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <h1>Index Page</h1>
+    <div class="main-header">
+        <h1>Index Page</h1>
+    </div>
 
     <div class="container">
         <p>ASDFASDFDSADFADSFADSFASDFASDFASDFASDFADSFADSFADSFADFS</p>
